<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/NombreAppTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/NombreAppTXT"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/ModuloTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/NombreModuloTXT"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/IniciarSesionTXT"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/CorreoLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CorreoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint="@string/PassLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/Btn_Logeo"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/holo_blue_light"
            android:text="@string/Btn_Logeo" />

        <Button
            android:id="@+id/Btn_Salir"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/holo_blue_light"
            android:text="@string/Btn_Salir" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>